Fixed some overflowing issues with top menu

--- a/resources/assets/sass/partak/_header.scss
+++ b/resources/assets/sass/partak/_header.scss
@@ -10,6 +10,8 @@
   }
 
   .userbox {
+    margin-right: 0.2rem;
+    
     > .btn {
       height: 100%;
       display: flex;
